--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -27,3 +27,15 @@ body {
   font-size: 1.2em;
   padding: 10px 20px;
 }
+
+.ens-avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.account-info {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
